--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,10 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <a href="#" class="cta-button">Get Started</a>
+            <div>
+            <a href="/register.html" class="cta-button">Register</a>
+            <a href="/login.html" class="cta-button">Login</a>
+            </div>
         </nav>
     </header>
 
@@ -28,7 +31,6 @@
             <p>Capture, organize, and access your notes from anywhere. The simple yet powerful note-taking experience you've been looking for.</p>
             <div class="hero-buttons">
                 <a href="#" class="btn-primary">Start Taking Notes</a>
-                <a href="#" class="btn-secondary">Learn More</a>
             </div>
         </div>
     </section>
